通用接口API: 上报信息、获取配置、更新配置
